--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "setup": "node scripts/setup.js",
     "dev": "next dev",
     "build": "next build",
+    "build:vercel": "next build",
     "start": "next start",
     "lint": "next lint",
     "type-check": "tsc --noEmit",
