--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@shopify/storefront-api-client": "^1.0.8",
     "firebase": "^10.7.0",
     "firebase-admin": "^12.0.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
@@ -33,6 +34,7 @@
     "@playwright/test": "^1.40.0",
     "@testing-library/jest-dom": "^6.0.0",
     "@testing-library/react": "^14.0.0",
+    "@types/jsonwebtoken": "^9.0.3",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
